test/Fail/IUnivRecord.agda
{-# OPTIONS --cubical #-}

open import Agda.Primitive.Cubical

record Bad : IUniv where
